adlatus-ci-cd/cd/deploy/base/modules/resource-catalog-api/patches/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: resource-catalog-api-deployment
  namespace: adl
spec:
  template:
    spec:
      containers:
        - name: mongodb
          image: mongo:7
          ports: 
            - containerPort: 27017
              hostPort: 27017
      imagePullSecrets:
        - name: docker-regcred
