adlatus-ci-cd/cd/deploy/base/modules/resource-catalog-api/patches/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: resource-catalog-api-service
  namespace: adl
spec:
  $patch: replace
  selector:
    app: resource-catalog-api
  ports:
    - $patch: replace
    - port: 8080
      targetPort: 8080
