adlatus-ci-cd/cd/deploy/base/modules/resource-catalog-api/patches/ingress.yaml
$patch: delete
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: resource-catalog-api-ingress
  namespace: adl
